// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logRequestMiddleware log should match snapshot when next succeeds 1`] = `
Object {
  "duration": 1,
  "method": "GET",
  "path": "http://test.com/MOCK_URL",
  "responseStatus": 200,
}
`;

exports[`logRequestMiddleware log should match snapshot when next throws 1`] = `
Object {
  "duration": 1,
  "method": "GET",
  "path": "http://test.com/MOCK_URL",
  "responseStatus": 500,
}
`;
